[gd_scene load_steps=8 format=3 uid="uid://du74m1788wbjd"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Card/gameplay-card.gd" id="1_s1wa0"]
[ext_resource type="FontFile" uid="uid://c3vhrrc52vift" path="res://Assets/FontFiles/Montserrat/Montserrat-Bold.ttf" id="2_jr4xc"]
[ext_resource type="Script" path="res://Interfaces/Gameplay/Card/CardEffects/emp-glitch.gd" id="4_e4w75"]
[ext_resource type="FontFile" uid="uid://b33ot3epa3xqe" path="res://Assets/FontFiles/Montserrat/Montserrat-ExtraBoldItalic.ttf" id="4_rp714"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tqwn"]
size = Vector2(900, 1400)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7vep"]
bg_color = Color(0.51728, 0.440562, 0.201283, 1)
border_width_left = 24
border_width_top = 24
border_width_right = 24
border_width_bottom = 24
border_color = Color(0.912224, 0.826062, 0.572761, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvkrs"]
bg_color = Color(0.00820202, 0.00820202, 0.00820202, 1)
border_color = Color(0.0177324, 0.0177324, 0.0177324, 1)
corner_radius_top_left = 56
corner_radius_top_right = 56
corner_radius_bottom_right = 56
corner_radius_bottom_left = 56
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="GameplayCard" type="Node2D"]
script = ExtResource("1_s1wa0")

[node name="Button" type="TouchScreenButton" parent="."]
shape = SubResource("RectangleShape2D_5tqwn")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -700.0
offset_right = 450.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u7vep")

[node name="Pattern" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.313726)

[node name="NameLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -629.0
offset_right = 161.5
offset_bottom = -501.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_jr4xc")
theme_override_font_sizes/font_size = 104
text = "Name"
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = 500.0
offset_right = 161.5
offset_bottom = 628.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_jr4xc")
theme_override_font_sizes/font_size = 120
text = "Name"
horizontal_alignment = 1

[node name="TypeIcons" type="Sprite2D" parent="."]

[node name="LeftIcon" type="Sprite2D" parent="TypeIcons"]
position = Vector2(-340, 565)

[node name="RightIcon" type="Sprite2D" parent="TypeIcons"]
position = Vector2(340, 565)

[node name="ArtLayer" type="Node2D" parent="."]
position = Vector2(0, -180)

[node name="Panel" type="Panel" parent="ArtLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -248.25
offset_right = 350.0
offset_bottom = 251.75
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hvkrs")

[node name="CardArt" type="Sprite2D" parent="ArtLayer"]
position = Vector2(0, 2)
script = ExtResource("4_e4w75")

[node name="KeywordsLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = 103.0
offset_right = 275.0
offset_bottom = 461.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_rp714")
theme_override_font_sizes/font_size = 88
text = "Buried
Rust
Celebration"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="released" from="Button" to="." method="_on_button_released"]
